<resources>
    <string name="app_name">Clothes Store</string>
    <string name="name">Name</string>
    <string name="get_on_board">Get on Board</string>
    <string name="terms">By Creating an account ,you agree to our Term and Uses and Privacy policy</string>
    <string name="Phone_text">Phone number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="i_am_already_a_ember">I am already a member</string>
    <string name="date_of_birth">Date_of_Birth</string>
    <string name="create_new_accont">SIGN UP</string>
    <string name="sign_in">Sign in</string>
    <string name="remeber_me">Remeber me</string>
    <string name="forget_password">Forget password</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="barcode_des">pick any source of photo u want to get</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">paymentActivity</string>
    <string name="enter_your_visa_card">enter your visa card</string>
    <string name="happy_birth_day_to_you">Happy birth day to you</string>
    <string name="we_hope_that_you_have_nice_day">we hope that you have nice day</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>