<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/closebutton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/editTextColor" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/barcode_scanner"
                android:textColor="?attr/editTextColor"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/closebutton" />

            <TextView
                android:id="@+id/descrption"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/barcode_des"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <ImageView
                android:id="@+id/camrabutton"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintEnd_toStartOf="@+id/gallrytext"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="?attr/editTextColor"

                app:layout_constraintTop_toBottomOf="@id/descrption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="?attr/editTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/camrabutton"
                app:layout_constraintStart_toEndOf="@+id/camrabutton"
                app:layout_constraintTop_toTopOf="@id/camrabutton" />

            <ImageView
                android:id="@+id/gallerybutton"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:adjustViewBounds="true"
                app:tint="?attr/editTextColor"
                android:src="@drawable/ic_baseline_insert_photo_24"
                app:layout_constraintEnd_toStartOf="@id/gallrytext"
                app:layout_constraintTop_toBottomOf="@id/descrption" />

            <TextView
                android:id="@+id/gallrytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="?attr/editTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/camrabutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/camrabutton"
                app:layout_constraintTop_toTopOf="@id/camrabutton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>